2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Speed-up video on yeeloong.

	* grub-core/video/sm712.c (framebuffer): Remove render_target and
	add cached_ptr.
	(grub_video_sm712_video_fini): Unmap cached_ptr.
	(grub_video_sm712_setup): Use cache address and grub_video_fb_setup.
	(grub_video_sm712_set_active_render_target): Removed.
	(grub_video_adapter): Use grub_video_fb_set_active_render_target.
	(grub_video_sm712_swap_buffers): Call grub_video_fb_swap_buffers and
	sync caches.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid flushing the same line multiple times on loongson.

	* grub-core/kern/mips/cache.S [GRUB_MACHINE_MIPS_LOONGSON]:
	Step in 32 bytes and not 1 byte.
	* grub-core/kern/mips/cache_flush.S [GRUB_MACHINE_MIPS_LOONGSON]:
	Likewise.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_find_root_devices_from_mountinfo): Handle btrfs
	subvolumes.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement flow control for http.

	* grub-core/net/http.c (parse_line): Handle response 206.
	(http_receive): Stall if too many packets are in the queue.
	(http_establish): Fix range header.
	(http_seek): Fix double free.
	(http_close): Likewise.
	(http_packets_pulled): New function.
	(grub_http_protocol): Set http_seek
	* grub-core/net/tcp.c (grub_net_tcp_socket): New field `i_stall'.
	(ack_real): Set window depending on i_stall.
	(grub_net_send_tcp_packet): Likewise.
	(grub_net_tcp_stall): New function.
	(grub_net_tcp_unstall): Likewise.
	* include/grub/net/tcp.h (grub_net_tcp_stall): New proto.
	(grub_net_tcp_unstall): Likewise.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c: Decrease stall to 50 packets.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_net_fs_open): Free resources on failed open.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Fix a typo.
